<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/change_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:hint="@string/word"
        android:autofillHints="@string/word"
        android:inputType="textAutoComplete"
        android:layout_margin="4dp"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/change_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:autofillHints="@string/word"
        android:hint="@string/desc"
        android:inputType="textAutoComplete"
        android:layout_margin="4dp"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/change_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_margin="4dp"
        android:autofillHints="@string/word"
        android:hint="@string/price"
        android:inputType="textAutoComplete"
        android:textSize="18sp"/>

    <ImageView
        android:id="@+id/change_image"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_margin="4dp"
        android:minHeight="48dp"
        android:contentDescription="@string/takeimage"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/save_changes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/save"
        android:textColor="#FFFFFF"
        android:layout_margin="16dp"/>

</LinearLayout>